deployment.yml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      description: The web server's http port.
    labels:
      app: basic-spring-boot
      template: basic-spring-boot
    name: basic-spring-boot
    namespace: basic-spring-boot-build
  spec:
    ports:
    - port: 8080
      targetPort: 8080
    selector:
      deploymentConfig: basic-spring-boot
- apiVersion: route.openshift.io/v1
  id: basic-spring-boot-http
  kind: Route
  metadata:
    annotations:
      argocd.argoproj.io/sync-options: Validate=false
      description: Route for application's http service.
    labels:
      app: basic-spring-boot
      template: basic-spring-boot
    name: basic-spring-boot
    namespace: basic-spring-boot-build
  spec:
    host: ""
    to:
      name: basic-spring-boot
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: basic-spring-boot
      template: basic-spring-boot
    name: basic-spring-boot
    namespace: basic-spring-boot-build
  spec:
    replicas: 1
    selector:
      deploymentConfig: basic-spring-boot
    strategy:
      type: Recreate
    template:
      metadata:
        labels:
          app: basic-spring-boot
          deploymentConfig: basic-spring-boot
        name: basic-spring-boot
      spec:
        containers:
        - env:
          - name: JWS_ADMIN_USERNAME
            value: ${JWS_ADMIN_USERNAME}
          - name: JWS_ADMIN_PASSWORD
            value: ${JWS_ADMIN_PASSWORD}
          image: basic-spring-boot
          imagePullPolicy: Always
          name: basic-spring-boot
          ports:
          - containerPort: 8778
            name: jolokia
            protocol: TCP
          - containerPort: 8080
            name: http
            protocol: TCP
          readinessProbe:
            exec:
              command:
              - /bin/bash
              - -c
              - curl -s 'http://localhost:8080/health' |grep -iq 'status.:.UP'
        terminationGracePeriodSeconds: 60
    triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
        - basic-spring-boot
        from:
          kind: ImageStreamTag
          name: basic-spring-boot:latest
      type: ImageChange
    - type: ConfigChange
- apiVersion: authorization.openshift.io/v1
  groupNames: null
  kind: RoleBinding
  metadata:
    creationTimestamp: null
    labels:
      template: basic-spring-boot
    name: tekton_edit
    namespace: basic-spring-boot-build
  roleRef:
    name: edit
  subjects:
  - kind: ServiceAccount
    name: tekton
    namespace: basic-spring-boot-build
  userNames:
  - system:serviceaccount:basic-spring-boot-build:tekton
kind: List
metadata: {}
